Bug 137874 - FILEOPEN XLSX Pie chart legend changes if there is only one column of data
Summary: FILEOPEN XLSX Pie chart legend changes if there is only one column of data
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-10-30 12:07 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (13.11 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-10-30 12:07 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (131.68 KB, image/png)
2020-10-30 12:07 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-30 12:07:00 UTC
Created attachment 166872 [details]
Example file from Excel

Attached Excel-made file contains a simple pie chart with only one column of data.
Excel puts the data points into the legend but when this file is opened in Calc it sets the legend as “Column A”.

Steps to reproduce:
    1. Open attached file

Actual results:
Legend says “Column A”. 
Creating a new pie chart from the data also creates a legend with the expected “1 2 3” content.

Expected results:
Legend should be “1 2 3” like in Excel. 

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: 8bf8e606e310c2032ed4ead7c3f2bf4a6048ecc2
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-30 12:07:17 UTC
Created attachment 166873 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Commit Notification 2020-11-12 12:59:04 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d23aed9a1fbb6549ca3b8a3e2ab5d779c84e3fb5

tdf#137874 Chart OOXML import: fix pie chart legend entries

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-12-30 10:11:12 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!