tdf#137874 Chart OOXML import: fix pie chart legend entries

Pie chart legend changed when VaryColorsByPoint was false.

Change-Id: I8022e5290f2269a902b4417f91d2e454f088c553